--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "qcon",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Query constructor.",
   "main": "qcon.deploy.js",
   "support": "qcon.support.js",
@@ -21,10 +21,18 @@
     "test",
     "tests"
   ],
+  "resolutions": {
+    "falzy": "^0.20.0",
+    "protype": "^0.22.0",
+    "cemento": "^0.16.0",
+    "harden": "^0.22.0",
+    "kount": "^0.11.0"
+  },
   "dependencies": {
-    "falzy": "^0.19.0",
+    "falzy": "^0.20.0",
     "fname": "^0.8.0",
-    "protype": "^0.21.0",
+    "fnamed": "^0.8.0",
+    "protype": "^0.22.0",
     "pyp": "^0.0.0",
     "wauker": "^0.14.0"
   }
