--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qcon",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Query constructor.",
   "main": "qcon.js",
   "support": "qcon.support.js",
@@ -27,9 +27,10 @@
   "homepage": "https://github.com/volkovasystems/qcon#readme",
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "falzy": "^0.19.0",
+    "falzy": "^0.20.0",
     "fname": "^0.8.0",
-    "protype": "^0.21.0",
+    "fnamed": "^0.8.0",
+    "protype": "^0.22.0",
     "pyp": "^0.0.0",
     "wauker": "^0.14.0"
   },
