--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qcon",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Query constructor.",
   "main": "qcon.js",
   "support": "qcon.support.js",
@@ -20,6 +20,10 @@
     "qcon"
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+  "contributors": [
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/volkovasystems/qcon/issues"
@@ -28,15 +32,15 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "falzy": "^0.20.0",
-    "fname": "^0.8.0",
-    "fnamed": "^0.8.0",
+    "fname": "^0.9.0",
+    "fnamed": "^0.9.0",
     "protype": "^0.22.0",
-    "pyp": "^0.0.0",
-    "wauker": "^0.14.0"
+    "pyp": "^0.1.0",
+    "wauker": "^0.16.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
