--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,13 @@
 		"bower_components",
 		"test",
 		"tests"
-	]
+	],
+	"dependencies": {
+		"falzy": "^0.23.0",
+		"fname": "^0.13.0",
+		"fnamed": "^0.14.0",
+		"protype": "^0.24.0",
+		"pyp": "^0.5.0",
+		"wauker": "^0.21.0"
+	}
 }
